--- a/learn-spring-framework/pom.xml
+++ b/learn-spring-framework/pom.xml
@@ -21,6 +21,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>jakarta.inject</groupId>
+			<artifactId>jakarta.inject-api</artifactId>
+			<version>2.0.1.MR</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
